# COSC363-Assignment-1

./: CMakeLists.txt  Glow.tga  Mercury.tga  README.md  Tex1.tga  alientex.tga  ass.cpp  ass1.cpp  assignment1.cpp  blue-clear.tga  dirt.tga  glass_texture.tga  loadTGA.h  pano8.tga  pano9.tga  ship_texture1.tga  skyeqi.tga  spaceModels.cpp  spaceModels.h
images/: glass_texture1.tga
